# crudex

./: Dockerfile  Makefile  README.md  app.py  config.py  console.py  database.py  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
tests/: test_app.py  test_console.py
